Fix spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 .view{
     min-height: 90vh;
     width: 90vw;
-    padding: 5vh;
+    padding: 1vw 5vh;
     margin: auto;
     padding-bottom: 100px;
     text-align: center;
@@ -80,7 +80,7 @@
 .project{
     height: 200px;
     width: 300px;
-    margin: 2% 5%;
+    margin: 2% auto;
     margin-top: 5vh;
     padding: 2.5%;
     display: inline-block;
